Fix spacing.

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -639,10 +639,10 @@ table.wiki-content-table tr {
 /* Rating List Columns */
 
 #who-rated-page-area > div {
-    display: grid;
-    grid-gap: 0.25em;
-    grid-template-columns: repeat(4, 1fr auto);
-    grid-auto-flow: row;
+	display: grid;
+	grid-gap: 0.25em;
+	grid-template-columns: repeat(4, 1fr auto);
+	grid-auto-flow: row;
 	justify-items: end;
 }
 
@@ -651,13 +651,13 @@ table.wiki-content-table tr {
 }
 
 #who-rated-page-area > div > span[style*="color"] {
-    font-weight: 900;
-    text-align: left;
+	font-weight: 900;
+	text-align: left;
 }
 
 #who-rated-page-area .printuser a {
-    white-space: nowrap;
-    font-size: 80%;
+	white-space: nowrap;
+	font-size: 80%;
 }
 
 
@@ -698,35 +698,34 @@ table.wiki-content-table tr {
 
 /* RATING MODULE ONLY TARGET */
 
-#html-body:target .page-title, 
-#html-body:target #page-title, 
-#html-body:target #breadcrumbs, 
-#html-body:target #page-options-container, 
-#html-body:target .page-header, 
-#html-body:target .page-info-break, 
-#html-body:target .page-options-container, 
-#html-body:target .action-area, 
-#html-body:target header, 
-#html-body:target #header, 
-#html-body:target footer, 
-#html-body:target #footer, 
-#html-body:target #navi-bar, 
-#html-body:target #navi-bar-shadow, 
-#html-body:target #page-option-bottom-tips, 
-#html-body:target #page-option-bottom-2-tips, 
-#html-body:target #odialog-hovertips, 
-#html-body:target #wd-ed-dialogs, 
-#html-body:target #odialog-container, 
+#html-body:target .page-title,
+#html-body:target #page-title,
+#html-body:target #breadcrumbs,
+#html-body:target #page-options-container,
+#html-body:target .page-header,
+#html-body:target .page-info-break,
+#html-body:target .page-options-container,
+#html-body:target .action-area,
+#html-body:target header,
+#html-body:target #header,
+#html-body:target footer,
+#html-body:target #footer,
+#html-body:target #navi-bar,
+#html-body:target #navi-bar-shadow,
+#html-body:target #page-option-bottom-tips,
+#html-body:target #page-option-bottom-2-tips,
+#html-body:target #odialog-hovertips,
+#html-body:target #wd-ed-dialogs,
+#html-body:target #odialog-container,
 #html-body:target #license-area,
 #html-body:target #side-bar,
-#html-body:target .page-tags
-{ 
-    display:none !important; 
-} 
+#html-body:target .page-tags {
+	display:none !important;
+}
 
 #html-body:target #page-content > *:not([style*="text-align:"]):not(.creditRate),
 #html-body:target #page-content > *:not(.page-rate-widget-box):not(.creditRate) > *:not(.page-rate-widget-box):not(.creditRate) {
-	display:none !important; 
+	display:none !important;
 }
 #html-body:target {
 	color:rgba(0,0,0,0)
@@ -760,5 +759,5 @@ table.wiki-content-table tr {
 #html-body:target #container,
 #html-body:target #container-wrap-wrap,
 #html-body:target #container-wrap {
-    background: rgba(0,0,0,0);
+	background: rgba(0,0,0,0);
 }
